# raytracer

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
docs/: architecture-walkthrough.md  render-flow.md
docs/render_reviews/: 2026-07-01-high-quality-render-review.md
docs/render_reviews/assets/: high_quality_render_metrics.json
docs/superpowers/plans/: 2026-06-28-stage10-linear-bvh.md  2026-06-28-stage11-pbr-textures-emission.md  2026-06-28-stage8-triangles-and-meshes.md  2026-06-28-stage9-obj-loading-and-transforms.md  2026-07-01-renderer-quality-assets-regression-performance-import.md
docs/superpowers/specs/: 2026-06-28-stage10-linear-bvh-design.md  2026-06-28-stage11-pbr-textures-emission-design.md  2026-06-28-stage8-triangles-and-meshes-design.md  2026-06-28-stage9-obj-loading-and-transforms-design.md  2026-07-01-renderer-quality-assets-regression-performance-import-design.md
include/raytracer/geometry/: aabb.h  bvh.h  hittable.h  hittable_list.h  sphere.h  triangle.h  triangle_mesh.h
include/raytracer/material/: material.h  texture.h
include/raytracer/math/: mat4.h  ray.h  util.h  vec2.h  vec3.h
include/raytracer/render/: camera.h  image.h  renderer.h  rgba32f.h  texture.h
include/raytracer/scene/: glb.h  json.h  obj.h  scene.h
integrations/: README.md
integrations/blender/: README.md  raytracer_addon.py
models/glb/: toyota_mark_ii_jzx100.glb
models/khronos/: LICENSES.md
scenes/: bunny_test.json  cornell_box.json  default.json  disk_light_test.json  glass.json  glass_bottle.json  glass_emissive.json  glass_volume.json  khronos_attenuation_test.json  khronos_compare_metallic.json  khronos_compare_roughness.json  khronos_glass_broken_window.json  khronos_glass_hurricane_candle_holder.json  khronos_glass_vase_flowers.json  khronos_transmission_roughness_test.json  khronos_transmission_test.json  khronos_water_bottle.json  mark.json  mirror_glass_water.json  no_normal_obj.json  obj.json  obj_mtl_test.json  pbr_test.json  studio_materials.json  texture_test.json  textured_quad.json  three_balls.json  triangle_test.json
scripts/: benchmark.sh  benchmark_report.py  fetch_khronos_assets.sh  html_report.py  ppm_to_png.sh  render_report.py
src/: blender_bridge.cpp  main.cpp  remote_server.cpp
tests/: regression_tests.cpp
tests/golden/: compare_images.py
tests/golden/scenes/: golden_bunny_test.json  golden_default.json  golden_glass_emissive.json  golden_khronos_attenuation_test.json  golden_khronos_compare_metallic.json  golden_khronos_compare_roughness.json  golden_khronos_transmission_roughness_test.json  golden_khronos_water_bottle.json  golden_mirror_glass_water.json  golden_mtl_extended.json  golden_no_normal_obj.json  golden_obj_mtl_test.json  golden_studio_materials.json
textures/: checker.pnm  mtl_test.ppm
